--- a/styles/src/index.scss
+++ b/styles/src/index.scss
@@ -5,4 +5,6 @@
 @use 'element-ui/datePicker.scss';
 @use 'element-ui/radio.scss';
 @use 'element-ui/radio-button.scss';
+@use 'element-ui/checkbox.scss';
+@use 'element-ui/checkbox-button.scss';
 
