--- a/styles/src/common/var.scss
+++ b/styles/src/common/var.scss
@@ -108,6 +108,7 @@ $text-color: map.merge(
 $border-color: () !default;
 $border-color: map.merge(
   (
+    '': #ccc,
     'input': #ccc,
     // 用于分割线、不可点击状态
     'light': #f5f5f5,
