--- a/styles/src/index.scss
+++ b/styles/src/index.scss
@@ -7,4 +7,5 @@
 @use 'element-ui/radio-button.scss';
 @use 'element-ui/checkbox.scss';
 @use 'element-ui/checkbox-button.scss';
+@use 'element-ui/input.scss';
 
