--- a/styles/src/index.scss
+++ b/styles/src/index.scss
@@ -8,4 +8,5 @@
 @use 'element-ui/checkbox.scss';
 @use 'element-ui/checkbox-button.scss';
 @use 'element-ui/input.scss';
+@use 'element-ui/table.scss';
 
