--- a/styles/src/index.scss
+++ b/styles/src/index.scss
@@ -9,4 +9,6 @@
 @use 'element-ui/checkbox-button.scss';
 @use 'element-ui/input.scss';
 @use 'element-ui/table.scss';
+@use 'element-ui/empty.scss';
+@use 'element-ui/pagination.scss';
 
