--- a/styles/src/element-ui/table.scss
+++ b/styles/src/element-ui/table.scss
@@ -14,5 +14,96 @@
   @include set-component-css-var('table', $table);
 }
 
-@include b(table, true) {
+@include b(table) {
+
+  .el-table {
+    font-size: getCssVar('table-font-size');
+    color: getCssVar('table-text-color');
+    border: 0;
+
+    .el-table__body tr:hover>td.el-table__cell {
+      background-color: getCssVar('table-header-bg-color');
+    }
+
+    .el-table__header-wrapper,
+    .el-table__fixed-header-wrapper {
+      border-radius: getCssVar('table-border-radius');
+
+      .el-table__header {
+
+        th.el-table__cell {
+          background-color: getCssVar('table-header-bg-color');
+        }
+
+        .el-table__cell {
+          border: none;
+          padding: map.get($table-padding, 'default');
+        }
+
+        .cell {
+          color: getCssVar('table-header-text-color');
+          line-height: getCssVar('table-line-height');
+        }
+      }
+    }
+
+
+    .el-table__body {
+      .el-table__cell {
+        padding: 20px 0;
+        border-color: getCssVar('table-border-color');
+
+        .cell {
+          color: getCssVar('table-text-color');
+          line-height: getCssVar('table-line-height');
+        }
+      }
+    }
+  }
+
+  .el-table::before,
+  .el-table--border::after,
+  .el-table--group::after {
+    width: 0;
+  }
+
+  @include when(border) {
+    .el-table {
+      .el-table__header-wrapper {
+        margin-bottom: 20px;
+      }
+
+      .el-table__body-wrapper::before,
+      .el-table__body-wrapper::after {
+        content: '';
+        position: absolute;
+        background-color: getCssVar('table-border-color');
+        z-index: 1;
+      }
+
+      .el-table__body-wrapper::before {
+        top: 0;
+        width: 100%;
+        height: 1px;
+      }
+
+      .el-table__body-wrapper::after {
+        top: 0;
+        left: 0;
+        width: 1px;
+        height: 100%;
+      }
+
+      &.el-table--scrollable-y {
+        .el-table__body-wrapper {
+          height: calc(100% - 81px) !important;
+          border-left: getCssVar('table-border');
+
+          &::after {
+            width: 0;
+          }
+        }
+      }
+    }
+  }
 }
