--- a/styles/src/element-ui/empty.scss
+++ b/styles/src/element-ui/empty.scss
@@ -34,7 +34,7 @@
   }
 
   @include e(description) {
-    margin-top: getCssVar('empty-description-margin-top');
+    margin: getCssVar('empty-description-margin');
 
     p {
       margin: 0;
