--- a/styles/src/common/var.scss
+++ b/styles/src/common/var.scss
@@ -769,7 +769,6 @@ $switch: map.merge(
 );
 
 // Dialog
-// css3 var in packages/theme-chalk/src/dialog.scss
 $dialog: () !default;
 $dialog: map.merge(
   (
@@ -978,9 +977,10 @@ $dropdown: map.merge(
 $drawer: () !default;
 $drawer: map.merge(
   (
-    'bg-color':
-      var(#{getCssVarName('dialog', 'bg-color')}, #{getCssVar('bg-color')}),
-    'padding-primary': var(#{getCssVarName('dialog', 'padding-primary')}, 20px),
+    'body-padding': 0 20px
+    // 'bg-color':
+    //   var(#{getCssVarName('dialog', 'bg-color')}, #{getCssVar('bg-color')}),
+    // 'padding-primary': var(#{getCssVarName('dialog', 'padding-primary')}, 20px),
   ),
   $drawer
 );
