--- a/styles/src/index.scss
+++ b/styles/src/index.scss
@@ -2,6 +2,7 @@
 @use 'iconfont.scss';
 
 @use 'element-ui/button.scss';
+@use 'element-ui/icon.scss';
 @use 'element-ui/datePicker.scss';
 @use 'element-ui/radio.scss';
 @use 'element-ui/radio-button.scss';
