--- a/styles/src/element-ui/table.scss
+++ b/styles/src/element-ui/table.scss
@@ -19,7 +19,6 @@
   .el-table {
     font-size: getCssVar('table-font-size');
     color: getCssVar('table-text-color');
-    border: 0;
 
     .el-table__body tr:hover>td.el-table__cell {
       background-color: getCssVar('table-header-bg-color');
@@ -34,9 +33,11 @@
         th.el-table__cell {
           background-color: getCssVar('table-header-bg-color');
         }
+        tr:last-of-type .el-table__cell {
+          border-bottom-color: transparent;
+        }
 
         .el-table__cell {
-          border: none;
           padding: map.get($table-padding, 'default');
         }
 
@@ -62,53 +63,26 @@
     }
   }
 
-  .el-table::before,
-  .el-table--border::after,
-  .el-table--group::after {
-    width: 0;
-  }
-
   @include e(pagination) {
     margin-top: getCssVar('table-pagination-margin-top');
   }
 
   @include when(border) {
     .el-table {
-      .el-table__header-wrapper {
+      .el-table__header {
         margin-bottom: 20px;
       }
 
-      .el-table__body-wrapper::before,
-      .el-table__body-wrapper::after {
-        content: '';
-        position: absolute;
-        background-color: getCssVar('table-border-color');
-        z-index: 1;
+      .el-table__row:first-of-type td {
+        border-top: 1px solid getCssVar('table-border-color');
       }
 
-      .el-table__body-wrapper::before {
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 1px;
+      td.el-table__cell {
+        border-left: 1px solid getCssVar('table-border-color');
       }
 
-      .el-table__body-wrapper::after {
-        top: 0;
-        left: 0;
-        width: 1px;
-        height: 100%;
-      }
-
-      &.el-table--scrollable-y {
-        .el-table__body-wrapper {
-          height: calc(100% - 81px) !important;
-          border-left: getCssVar('table-border');
-
-          &::after {
-            width: 0;
-          }
-        }
+      .el-table__row td:last-of-type {
+        border-right: 1px solid getCssVar('table-border-color');
       }
     }
   }
